--- a/css/styleindex2.css
+++ b/css/styleindex2.css
@@ -3,3 +3,28 @@
 #4pictures{
 	marging-top: 50px;
 }
+/* Large desktop */
+
+
+
+
+
+
+
+@media (min-width: 1200px) {
+    /* --------------------------------------
+       Carousel at 1200px
+   -------------------------------------- */
+	#myCarousel .item { height: 500px; }
+	#slide1 {
+	    background: url("../img/guy749.jpg") top center no-repeat;
+	    background: cover;
+	}
+	
+	#slide2 {
+	    background: url("../../images/stream_large.jpg") top center no-repeat;
+	}
+	
+	#slide3 {
+	    background: url("../../images/ocean_large.jpg") top center no-repeat;
+	}
